adjusted score displays width to prevent layout distortion upon reaching higher scores

--- a/src/scss/pages/game.scss
+++ b/src/scss/pages/game.scss
@@ -105,11 +105,13 @@
     &--blue{
         color: $player-blue;
         background-image: var(--score-player-blue);
+        min-width: var(--score-blue-min-width);
     }
 
     &--orange{
         color: $player-orange;
         background-image: var(--score-player-orange);
+        min-width: var(--score-orange-min-width);
     }
 }
 
