--- a/src/scss/themes/_coding.scss
+++ b/src/scss/themes/_coding.scss
@@ -53,6 +53,8 @@
     --score-padding-left: 28px;
     --score-player-blue: url("/assets/player-coding-blue.png");
     --score-player-orange: url("/assets/player-coding-orange.png");
+    --score-blue-min-width: 108px;
+    --score-orange-min-width: 143px;
 
     //player
     --player-padding-right: 39px;
