--- a/src/scss/themes/_gaming.scss
+++ b/src/scss/themes/_gaming.scss
@@ -52,6 +52,8 @@
     --score-padding-left: 30px;
     --score-player-blue: url("/assets/winner-blue.png");
     --score-player-orange: url("/assets/winner-orange.png");
+    --score-blue-min-width: 67px;
+    --score-orange-min-width: 67px;
 
     //player
     --player-padding-right: 58px;
